# fast_forge

./: README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
forge/: __init__.py  cli.py  generator.py  templates.py
forge/commands/: __init__.py  removemodule.py  startmodule.py
forge/template_files/module/: README.md.tpl  __init__.py.tpl
forge/template_files/module/application/: __init__.py.tpl  dto.py.tpl  services.py.tpl
forge/template_files/module/application/use_cases/: __init__.py.tpl  create_use_case.py.tpl
forge/template_files/module/domain/: __init__.py.tpl  entities.py.tpl  exceptions.py.tpl  repository.py.tpl  value_objects.py.tpl
forge/template_files/module/infrastructure/: __init__.py.tpl  settings.py.tpl
forge/template_files/module/infrastructure/gateways/: __init__.py.tpl  httpx_gateway.py.tpl
forge/template_files/module/infrastructure/repositories/: __init__.py.tpl  fake_repository.py.tpl
forge/template_files/module/presentation/: __init__.py.tpl  dependencies.py.tpl  router.py.tpl  schemas.py.tpl
forge/template_files/module/tests/: __init__.py.tpl  test_gateway.py.tpl  test_router.py.tpl  test_use_cases.py.tpl
src/modules/: __init__.py
src/modules/telegram/: README.md  __init__.py
src/modules/telegram/application/: __init__.py  dto.py  services.py
src/modules/telegram/application/use_cases/: __init__.py  create_telegram_use_case.py
src/modules/telegram/domain/: __init__.py  entities.py  exceptions.py  repository.py  value_objects.py
src/modules/telegram/infrastructure/: __init__.py  settings.py
src/modules/telegram/infrastructure/gateways/: __init__.py  httpx_gateway.py
src/modules/telegram/infrastructure/repositories/: __init__.py  fake_repository.py
src/modules/telegram/presentation/: __init__.py  dependencies.py  router.py  schemas.py
src/modules/telegram/tests/: __init__.py  test_gateway.py  test_router.py  test_use_cases.py
tests/: test_cli.py  test_commands.py  test_generator.py  test_templates.py
