[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_forge"
version = "0.1.0"
description = "CLI scaffolding generator for FastAPI Clean Architecture modules"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
forge = [
    "template_files/*.tpl",
    "template_files/*/*.tpl",
    "template_files/*/*/*.tpl",
    "template_files/*/*/*/*.tpl",
    "template_files/*/*/*/*/*.tpl",
]

[tool.pytest.ini_options]
addopts = "--cov=forge --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
pythonpath = [".", "src"]
testpaths = ["tests", "src/modules"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["forge", "tests", "src/modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
explicit_package_bases = true
files = ["forge", "tests", "src/modules"]
